--- a/Challenge-1/index.html
+++ b/Challenge-1/index.html
@@ -3,23 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <title>Binar</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  
 </head>
 <body>
     <div style="background-color: #f1f3ff;">
       <div class="container">
-        <nav class="navbar navbar-expand-lg">
-          <a class="navbar-brand" href="#">
-            <img 
-              src="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-logo.svg" 
-              alt="Logo" 
-              width="30" 
-              height="24" 
-              class="d-inline-block align-text-top">
-            Bootstrap
-          </a>
+        <nav class="navbar navbar-expand-lg sticky-top" style="background-color: #f1f3ff;">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+              <img 
+                src="Asset/Rectangle 74.png" 
+                alt="Logo" 
+                class="d-inline-block align-text-top">
+            </a>
           <button 
             class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -39,33 +38,57 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Pricing</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-              </li>
             </ul>
           </div>
+        </div>
       </nav>
-      <div class="row">
-        <div class="col-lg-6 d-flex align-items-center">
-            <h1>
-              Sewa & Rental Mobil Terbaik di kawasan Surabaya
-            </h1>
+      <div class="row gy-5 p-4">
+        <div class="col-lg-6 d-flex align-items-center flex-column">
+          <div class="row gy-5 p-10">
+            <div class="col">
+              <h1>
+                Sewa & Rental Mobil Terbaik di kawasan Surabaya
+              </h1>
+            </div>
+          </div>
+          <div class="row gy-10">
+            <div class="col">
+              <h6>
+                Selamat datang di Binar Car Rental. Kami menyediakan mobil kualitas terbaik <br>dengan harga terjangkau. Selalu siap melayani kebutuhanmu untuk sewa mobil <br>selama 24 jam.
+              </h6>
+            </div>
+          </div>
         </div>
         <div class="col-lg-6">
           <img src="Asset/img_car.png" class="img-fluid" alt="mobilbg" />
         </div>
       </div>
     </div>
-      
-    <script 
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-    </script>
-    <script 
-        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous">
-    </script>
-    <script 
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous">
-    </script>
+
+    <div class="container gy-500">
+      <div class="row gy-50 p-4">
+        <div class="col-lg-6 d-flex align-items-center flex-column">
+          <img src="Asset/img_service.png" class="img-fluid" alt="service" />
+        </div>
+        <div class="col-lg-6">
+          <div class="row">
+            <h1>
+              Best Car Rental for any kind of trip in (Lokasimu)!
+            </h1>
+          </div>
+          <div class="row">
+            <p>
+              Sewa mobil di (Lokasimu) bersama Binar Car Rental jaminan harga lebih murah dibandingkan yang lain, kondisi mobil baru, serta kualitas pelayanan terbaik untuk perjalanan wisata, bisnis, wedding, meeting, dll.
+            </p>
+          </div>
+          <div class="row"></div>
+            <img src="Asset/Frame 105.png"/>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
 
