--- a/Challenge-1/index.html
+++ b/Challenge-1/index.html
@@ -6,15 +6,16 @@
 
     <title>Binar</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
   
 </head>
 <body>
     <div style="background-color: #f1f3ff;">
       <div class="container">
-        <nav class="navbar navbar-expand-lg sticky-top" style="background-color: #f1f3ff;">
+        <nav class="navbar navbar-expand-lg d-flex justify-content-space-between sticky-top p-10" style="background-color: #f1f3ff;">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
-              <img 
+              <img  
                 src="Asset/Rectangle 74.png" 
                 alt="Logo" 
                 class="d-inline-block align-text-top">
@@ -24,69 +25,334 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a 
-                  class="nav-link active" 
-                  aria-current="page" 
-                  href="#">Home
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-            </ul>
+              <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                  <a 
+                    class="nav-link active" 
+                    href="#Ourservice">Our Service
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a 
+                    class="nav-link active" 
+                    aria-current="page" 
+                    href="#">Why Us
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a 
+                    class="nav-link active" 
+                    aria-current="page" 
+                    href="#">Testimonial
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a 
+                    class="nav-link active" 
+                    aria-current="page" 
+                    href="#">FAQ
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <button type="button" class="btn btn-success">Register</button>
+                </li>
+              </ul>
+            
           </div>
         </div>
-      </nav>
-      <div class="row gy-5 p-4">
-        <div class="col-lg-6 d-flex align-items-center flex-column">
+        </nav>
+        <div class="row gy-5 p-4">
+        <div class="col-lg-6 d-flex flex-column py-auto">
           <div class="row gy-5 p-10">
             <div class="col">
-              <h1>
-                Sewa & Rental Mobil Terbaik di kawasan Surabaya
-              </h1>
+              <h2><b>
+                Sewa & Rental Mobil Terbaik di kawasan Surabaya</b>
+              </h2>
             </div>
           </div>
           <div class="row gy-10">
             <div class="col">
               <h6>
-                Selamat datang di Binar Car Rental. Kami menyediakan mobil kualitas terbaik <br>dengan harga terjangkau. Selalu siap melayani kebutuhanmu untuk sewa mobil <br>selama 24 jam.
+                Selamat datang di Binar Car Rental. Kami menyediakan mobil kualitas terbaik dengan harga terjangkau. Selalu siap melayani kebutuhanmu untuk sewa mobil selama 24 jam.
               </h6>
             </div>
+          </div>
+          <div>
+            <button type="button" class="btn btn-success mt-2">Mulai Sewa Mobil</button>
           </div>
         </div>
         <div class="col-lg-6">
           <img src="Asset/img_car.png" class="img-fluid" alt="mobilbg" />
         </div>
+        </div>
       </div>
     </div>
 
-    <div class="container gy-500">
+    <!-- Our Service -->
+    <div class="container mt-5" id="#Ourservice" >
       <div class="row gy-50 p-4">
         <div class="col-lg-6 d-flex align-items-center flex-column">
           <img src="Asset/img_service.png" class="img-fluid" alt="service" />
         </div>
         <div class="col-lg-6">
-          <div class="row">
+          <div class="row md-10">
             <h1>
-              Best Car Rental for any kind of trip in (Lokasimu)!
+              Best Car Rental for any kind of trip in Surabaya!
             </h1>
           </div>
           <div class="row">
             <p>
-              Sewa mobil di (Lokasimu) bersama Binar Car Rental jaminan harga lebih murah dibandingkan yang lain, kondisi mobil baru, serta kualitas pelayanan terbaik untuk perjalanan wisata, bisnis, wedding, meeting, dll.
+              Sewa mobil di Surabaya bersama Binar Car Rental jaminan harga lebih murah dibandingkan yang lain, kondisi mobil baru, serta kualitas pelayanan terbaik untuk perjalanan wisata, bisnis, wedding, meeting, dll.
             </p>
           </div>
-          <div class="row"></div>
-            <img src="Asset/Frame 105.png"/>
+          <div class="row">
+            <img src="Asset/Frame 105.png" style="width: 70%; height: 70%;"/>
           </div>
         </div>
       </div>
     </div>
+
+    <!-- Why Us -->
+    <div class="container mt-5">
+        <h1><b>Why Us?</b></h1>
+        <h3>Mengapa harus pilih Binar car rental?</h3>
+        <div class="row gy-500 p-4">
+          <div class="col lg-3 ">
+            <div class="card m-2 lg-2  ">
+              <div class="card-body">
+                <img src="Asset/icon_complete.png" class="card-img-top mb-2" style="width: 30px; " alt="iconcomplate">
+                <h5 class="card-title"><b>Mobil Lengkap</b></h5>
+                <p class="card-text">Tersedia banyak pilihan mobil, kondisi masih baru, bersih dan terawat lewnubuierbgviuegbvi</p>
+              </div>
+            </div>
+            </div>
+            <div class="col lg-6 ">
+              <div class="card m-2 lg-6  ">
+                <div class="card-body">
+                  <img src="Asset/icon_price.png" class="card-img-top mb-2" style="width: 30px; " alt="iconcomplate">
+                  <h5 class="card-title"><b>Harga Murah</b></h5>
+                  <p class="card-text">Harga murah dan bersaing, bisa bandingkan harga kami dengan rental mobil lain</p>
+                </div>
+              </div>
+              </div>
+              <div class="col lg-3 ">
+                <div class="card m-2 lg-2  ">
+                  <div class="card-body">
+                    <img src="Asset/icon_24hrs.png" class="card-img-top mb-2" style="width: 30px; " alt="iconcomplate">
+                    <h5 class="card-title"><b>Layanan 24 jam</b></h5>
+                    <p class="card-text">Siap melayani kebutuhan Anda selama 24 jam nonstop. Kami juga tersedia di akhir minggu</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col lg-3 ">
+                <div class="card m-2 lg-2  ">
+                  <div class="card-body">
+                    <img src="Asset/icon_professional.png" class="card-img-top mb-2" style="width: 30px; " alt="iconcomplate">
+                    <h5 class="card-title"><b>Sopir Profesional</b></h5>
+                    <p class="card-text">Sopir yang profesional, berpengalaman, jujur, ramah dan selalu tepat waktu</p>
+                  </div>
+                </div>
+              </div>
+          </div>
+      </div>
+
+    <div class="container mt-5">
+      <div class="row text-center">
+        <h1><b>Testimonial</b></h1>
+        <h3>Bagian review positif dari para pelanggan kami</h3>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div id="carouselExampleAutoplaying" class="carousel slide" style="width:100%; height: 100%;" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="Asset/testi.png" class="d-block w-200" alt="testi1">
+              </div>
+              <div class="carousel-item">
+                <img src="Asset/testi.png" class="d-block w-200" alt="testi2">
+              </div>
+              <div class="carousel-item">
+                <img src="Asset/testi.png" class="d-block w-200" alt="testi3">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container mt-5">
+      <div class="row" id="footer">
+        <div class="col-lg-6">
+          <div class="row">
+            <h2><b>Sewa Mobil di Surabaya Sekarang</b></h2>
+          </div>
+          <div class="row">
+            <div class="row mt-3">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+            </div>
+          </div>
+          <button type="button" class="btn btn-success mt-5">Mulai Sewa Mobil</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-lg-5">
+          <h3><b>Frequently Asked Question</b></h3>
+          <h7>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h7>
+        </div>
+        <div class="col-lg-7">
+            <!-- row 1 -->
+          <div class="row">
+            <div class="accordion" id="accordionExample">
+              <div class="accordion-item mb-3">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                    Apa saja syarat yang dibutuhkan?
+                  </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  </div>
+                </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- row 2 -->
+          <div class="row">
+            <div class="accordion" id="accordionExample">
+              <div class="accordion-item mb-3">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Berapa hari minimal sewa mobil lepas kunci?
+                  </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  </div>
+                </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- row 3 -->
+          <div class="row">
+            <div class="accordion" id="accordionExample">
+              <div class="accordion-item mb-3">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    Berapa hari sebelumnya sabaiknya booking sewa mobil?
+                  </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  </div>
+                </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- row 4 -->
+          <div class="row">
+            <div class="accordion" id="accordionExample">
+              <div class="accordion-item mb-3">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFor" aria-expanded="false" aria-controls="collapseFor">
+                    Apakah Ada biaya antar-jemput?
+                  </button>
+                </h2>
+                <div id="collapseFor" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  </div>
+                </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- row 5 -->
+          <div class="row">
+            <div class="accordion" id="accordionExample">
+              <div class="accordion-item mb-3">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                    Bagaimana jika terjadi kecelakaan
+                  </button>
+                </h2>
+                <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  </div>
+                </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container mt-5 mb-10">
+        <div class="row">
+          <div class="col md-20">
+            <div class="row">
+              <p>Jalan Suroyo No. 161 Mayangan Kota Probolonggo 672000</p>
+            </div>
+            <div class="row">
+              <p>binarcarrental@gmail.com</p>
+            </div>
+            <div class="row">
+              <p>081-233-334-808</p>
+            </div>
+          </div>
+
+          <div class="col md-5">
+            <div class="row">
+              <p>Our Service</p>
+            </div>
+            <div class="row">
+              <p>Why Us</p>
+            </div>
+            <div class="row">
+              <p>Testimoniak</p>
+            </div>
+            <div class="row">
+              <p>FAQ</p>
+            </div>
+          </div>
+
+          <div class="col md-5">
+            <div class="row">
+              <p>Connect with us:</p>
+            </div>
+            <div class="row">
+              <img src="Asset/list item.png" style="width: 70%; height: 70%;">
+            </div>
+          </div>
+
+          <div class="col md-10">
+            <div class="row">
+              <p>Copyright Binar 2022</p>
+            </div>
+            <div class="row">
+              <img src="Asset/Rectangle 74.png" style="width: 50%; height: 50%;">
+            </div>
+          </div>
+        </div>
+      </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
