--- a/24001182-km7-nai-bcr-ch1/index.html
+++ b/24001182-km7-nai-bcr-ch1/index.html
@@ -122,7 +122,7 @@
               <div class="card-body">
                 <img src="Asset/icon_complete.png" class="card-img-top mb-2" style="width: 30px; " alt="iconcomplate">
                 <h5 class="card-title"><b>Mobil Lengkap</b></h5>
-                <p class="card-text">Tersedia banyak pilihan mobil, kondisi masih baru, bersih dan terawat lewnubuierbgviuegbvi</p>
+                <p class="card-text">Tersedia banyak pilihan mobil, kondisi masih baru, bersih dan terawat </p>
               </div>
             </div>
             </div>
@@ -162,7 +162,7 @@
         <h3>Bagian review positif dari para pelanggan kami</h3>
       </div>
       <div class="row">
-        <div class="col">
+        <div class="col mx-auto">
           <div id="carouselExampleAutoplaying" class="carousel slide" style="width:100%; height: 100%;" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
