update Our Service

--- a/24001182-km7-nai-bcr-ch1/index.html
+++ b/24001182-km7-nai-bcr-ch1/index.html
@@ -12,7 +12,7 @@
 <body>
     <div style="background-color: #f1f3ff;">
       <div class="container">
-        <nav class="navbar navbar-expand-lg d-flex justify-content-space-between sticky-top p-10" style="background-color: #f1f3ff;">
+        <nav class="navbar navbar-expand-lg d-flex justify-content-space-between sticky-top" style="background-color: #f1f3ff;">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
               <img  
@@ -61,8 +61,8 @@
           </div>
         </div>
         </nav>
-        <div class="row gy-5 p-4">
-        <div class="col-lg-6 d-flex flex-column py-auto">
+        <div class="judul row gy-5">
+        <div class="col-lg-6 d-flex flex-column">
           <div class="row gy-5 p-10">
             <div class="col">
               <h2><b>
@@ -81,7 +81,7 @@
             <button type="button" class="btn btn-success mt-2">Mulai Sewa Mobil</button>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="gambar col-lg-6">
           <img src="Asset/img_car.png" class="img-fluid" alt="mobilbg" />
         </div>
         </div>
@@ -106,8 +106,13 @@
             </p>
           </div>
           <div class="row">
-            <img src="Asset/Frame 105.png" style="width: 70%; height: 70%;"/>
-          </div>
+            <table class="centang"cellpadding="4" cellspacing="5">
+              <tr><td><img src="Asset/Group 53.png"></td><td>Sewa Mobil Dengan Supir di Bali 12 Jam</td></tr>
+              <tr><td><img src="Asset/Group 53.png"></td><td>Sewa Mobil Lepas Kunci di Bali 24 Jam</td></tr>
+              <tr><td><img src="Asset/Group 53.png"></td><td>Sewa Mobil Jangka Panjang Bulanan</td></tr>
+              <tr><td><img src="Asset/Group 53.png"></td><td>Gratis Antar - Jemput Mobil di Bandara</td></tr>
+              <tr><td><img src="Asset/Group 53.png"></td><td>Layanan Airport Transfer / Drop In Out</td></tr>
+            </table>
         </div>
       </div>
     </div>
