--- a/24001182-km7-nai-bcr-ch1/index.html
+++ b/24001182-km7-nai-bcr-ch1/index.html
@@ -10,6 +10,7 @@
   
 </head>
 <body>
+    <!-- Navbar dan Hero -->
     <div style="background-color: #f1f3ff;">
       <div class="container">
         <nav class="navbar navbar-expand-lg d-flex justify-content-space-between sticky-top" style="background-color: #f1f3ff;">
@@ -113,6 +114,7 @@
               <tr><td><img src="Asset/Group 53.png"></td><td>Gratis Antar - Jemput Mobil di Bandara</td></tr>
               <tr><td><img src="Asset/Group 53.png"></td><td>Layanan Airport Transfer / Drop In Out</td></tr>
             </table>
+          </div>
         </div>
       </div>
     </div>
@@ -124,7 +126,7 @@
         <div class="row gy-500 p-4">
           <div class="col lg-3 ">
             <div class="card m-2 lg-2  ">
-              <div class="card-body">
+              <div class="kartu card-body">
                 <img src="Asset/icon_complete.png" class="card-img-top mb-2" style="width: 30px; " alt="iconcomplate">
                 <h5 class="card-title"><b>Mobil Lengkap</b></h5>
                 <p class="card-text">Tersedia banyak pilihan mobil, kondisi masih baru, bersih dan terawat </p>
@@ -133,7 +135,7 @@
             </div>
             <div class="col lg-6 ">
               <div class="card m-2 lg-6  ">
-                <div class="card-body">
+                <div class="kartu card-body">
                   <img src="Asset/icon_price.png" class="card-img-top mb-2" style="width: 30px; " alt="iconcomplate">
                   <h5 class="card-title"><b>Harga Murah</b></h5>
                   <p class="card-text">Harga murah dan bersaing, bisa bandingkan harga kami dengan rental mobil lain</p>
@@ -142,7 +144,7 @@
               </div>
               <div class="col lg-3 ">
                 <div class="card m-2 lg-2  ">
-                  <div class="card-body">
+                  <div class="kartu card-body">
                     <img src="Asset/icon_24hrs.png" class="card-img-top mb-2" style="width: 30px; " alt="iconcomplate">
                     <h5 class="card-title"><b>Layanan 24 jam</b></h5>
                     <p class="card-text">Siap melayani kebutuhan Anda selama 24 jam nonstop. Kami juga tersedia di akhir minggu</p>
@@ -151,7 +153,7 @@
               </div>
               <div class="col lg-3 ">
                 <div class="card m-2 lg-2  ">
-                  <div class="card-body">
+                  <div class="kartu card-body">
                     <img src="Asset/icon_professional.png" class="card-img-top mb-2" style="width: 30px; " alt="iconcomplate">
                     <h5 class="card-title"><b>Sopir Profesional</b></h5>
                     <p class="card-text">Sopir yang profesional, berpengalaman, jujur, ramah dan selalu tepat waktu</p>
@@ -161,6 +163,7 @@
           </div>
       </div>
 
+    <!-- Testimonial -->
     <div class="container mt-5">
       <div class="row text-center">
         <h1><b>Testimonial</b></h1>
@@ -193,6 +196,7 @@
       </div>
     </div>
 
+    <!-- Get Started -->
     <div class="container mt-5">
       <div class="row" id="footer">
         <div class="col-lg-6">
@@ -208,8 +212,8 @@
           </div>
         </div>
       </div>
-    </div>
 
+      <!-- FAQ -->
     <div class="container mt-5">
       <div class="row">
         <div class="col-lg-5">
@@ -310,6 +314,7 @@
         </div>
       </div>
 
+      <!-- Footer -->
       <div class="container mt-5 mb-10">
         <div class="row">
           <div class="col md-20">
