--- a/24001182-km7-nai-game-ch2/index.html
+++ b/24001182-km7-nai-game-ch2/index.html
@@ -86,8 +86,12 @@
               </div>
             </div>
             <div>
-              <button type="button" class="btn btn-success mt-2">
-                Mulai Sewa Mobil
+              <button type="button" class="btn btn-success mt-5">
+                <a
+                  href="carimobil.html"
+                  style="color: white; text-decoration: none"
+                  >Mulai Sewa Mobil</a
+                >
               </button>
             </div>
           </div>
@@ -290,7 +294,9 @@
             </div>
           </div>
           <button type="button" class="btn btn-success mt-5">
-            Mulai Sewa Mobil
+            <a href="carimobil.html" style="color: white; text-decoration: none"
+              >Mulai Sewa Mobil</a
+            >
           </button>
         </div>
       </div>
