update gambar dan posisi

--- a/24001182-km7-nai-game-ch2/carimobil.html
+++ b/24001182-km7-nai-game-ch2/carimobil.html
@@ -110,7 +110,7 @@
     </div>
 
     <!-- Cari Mobil -->
-    <div class="container">
+    <div class="container mt-5">
       <div class="card">
         <div class="card-body">
           <div class="row m-2">
@@ -178,7 +178,7 @@
     <!-- hasil -->
     <div class="container hasil">
       <!-- Car Content -->
-      <div class="row" id="car-content"></div>
+      <div class="row mt-3" id="car-content"></div>
     </div>
 
     <script type="module" src="index.js"></script>
@@ -235,7 +235,7 @@
 
     <script>
       const dateControl = document.querySelector('input[type="date"]');
-      dateControl.value = "2017-06-01";
+      dateControl.value = "2024-10-05";
       console.log(dateControl.value); // prints "2017-06-01"
       console.log(dateControl.valueAsNumber); // prints 1496275200000, a JavaScript timestamp (ms)
     </script>
