--- a/24001182-km7-nai-game-ch2/carimobil.html
+++ b/24001182-km7-nai-game-ch2/carimobil.html
@@ -111,7 +111,7 @@
 
     <!-- Cari Mobil -->
     <div class="container mt-5">
-      <div class="card">
+      <div class="card kartu">
         <div class="card-body">
           <div class="row m-2">
             <div class="col">
