--- a/24001182-km7-nai-game-ch2/index.html
+++ b/24001182-km7-nai-game-ch2/index.html
@@ -152,10 +152,11 @@
     <div class="container mt-5">
       <h1><b>Why Us?</b></h1>
       <h3>Mengapa harus pilih Binar car rental?</h3>
-      <div class="row gy-500 p-4">
-        <div class="col lg-3">
-          <div class="card m-2 lg-2">
-            <div class="kartu card-body">
+      <div class="row d-flex flex-wrap justify-content-center">
+        <!-- card 1 -->
+        <div class="col-md-3 col-sm-12 d-flex flex-column mt-3">
+          <div class="card kartu">
+            <div class="card-body">
               <img
                 src="Asset/icon_complete.png"
                 class="card-img-top mb-2"
@@ -170,9 +171,10 @@
             </div>
           </div>
         </div>
-        <div class="col lg-6">
-          <div class="card m-2 lg-6">
-            <div class="kartu card-body">
+        <!-- card 2 -->
+        <div class="col-md-3 col-sm-12 d-flex flex-column mt-3">
+          <div class="card kartu">
+            <div class="card-body">
               <img
                 src="Asset/icon_price.png"
                 class="card-img-top mb-2"
@@ -187,9 +189,10 @@
             </div>
           </div>
         </div>
-        <div class="col lg-3">
-          <div class="card m-2 lg-2">
-            <div class="kartu card-body">
+        <!-- card 3 -->
+        <div class="col-md-3 col-sm-12 d-flex flex-column mt-3">
+          <div class="card kartu">
+            <div class="card-body">
               <img
                 src="Asset/icon_24hrs.png"
                 class="card-img-top mb-2"
@@ -204,9 +207,10 @@
             </div>
           </div>
         </div>
-        <div class="col lg-3">
-          <div class="card m-2 lg-2">
-            <div class="kartu card-body">
+        <!-- card 4 -->
+        <div class="col-md-3 col-sm-12 d-flex flex-column mt-3">
+          <div class="card kartu">
+            <div class="card-body">
               <img
                 src="Asset/icon_professional.png"
                 class="card-img-top mb-2"
@@ -546,8 +550,8 @@
           </div>
         </div>
       </div>
-    </div>
-
+    </div> 
+    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
