--- a/24001182-km7-nai-game-ch2/carimobil.html
+++ b/24001182-km7-nai-game-ch2/carimobil.html
@@ -110,7 +110,7 @@
     </div>
 
     <!-- Cari Mobil -->
-    <div class="container mt-5">
+    <div class="container mt-5 ">
       <div class="card kartu">
         <div class="card-body">
           <div class="row m-2">
@@ -166,7 +166,11 @@
               </div>
             </div>
             <div class="col">
-              <button type="button" class="button-register" id="cari">
+              <button
+                type="button"
+                class="btn btn-success button-register"
+                id="cari"
+              >
                 Cari Mobil
               </button>
             </div>
